--- a/main.html
+++ b/main.html
@@ -10,7 +10,53 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <div class="container">
+      <h1>Bootstrap Buttons</h1>
+      <button
+        id="button-1"
+        type="button"
+        style="background-color: #4e25ff"
+        class="btn btn-primary"
+      >
+        Button-1
+      </button>
+      <button id="button-2" type="button" class="btn btn-outline-secondary">
+        Button-2
+      </button>
+      <button id="button-3" type="button" class="btn btn-success">
+        Button-3
+      </button>
+      <button id="button-4" type="button" class="btn btn-danger">
+        Button-4
+      </button>
+      <button
+        id="button-5"
+        type="button"
+        style="background-color: #ffcb00; color: black"
+        class="btn btn-danger w-100 my-3"
+      >
+        Button-5
+      </button>
+      <button
+        id="button-6"
+        type="button"
+        style="background-color: #4addf7"
+        class="btn btn-danger"
+      >
+        Button-6
+      </button>
+      <button id="button-7" type="button" class="btn btn-light">
+        Button-7
+      </button>
+      <button id="button-8" type="button" class="btn btn-link">Button-8</button>
+    </div>
 
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+	</body>
 
 </html>
