--- a/main.html
+++ b/main.html
@@ -23,17 +23,16 @@
       <button id="button-2" type="button" class="btn btn-outline-secondary">
         Button-2
       </button>
-      <button id="button-3" type="button" class="btn btn-success">
+      <button id="button-3" type="button" class="btn btn-success btn-lg">
         Button-3
       </button>
-      <button id="button-4" type="button" class="btn btn-danger">
+      <button id="button-4" type="button" class="btn btn-danger btn-sm">
         Button-4
       </button>
       <button
         id="button-5"
         type="button"
-        style="background-color: #ffcb00; color: black"
-        class="btn btn-danger w-100 my-3"
+        class="btn btn-warning btn-lg btn-block"
       >
         Button-5
       </button>
@@ -41,7 +40,7 @@
         id="button-6"
         type="button"
         style="background-color: #4addf7"
-        class="btn btn-danger"
+        class="btn btn-info disabled"
       >
         Button-6
       </button>
